--- a/generar-png.html
+++ b/generar-png.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generar Gráfico PNG</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Biblioteca Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script> <!-- Plugin para etiquetas -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,77 +16,57 @@
             text-align: center;
             color: #004D57; /* Color del título */
         }
+
+        #chartContainer {
+            background-color: white; /* Fondo blanco del gráfico */
+            padding: 20px;
+            border-radius: 8px;
+            width: 90%;
+            margin: 20px auto;
+        }
     </style>
 </head>
 <body>
     <h1 id="chartTitle"></h1>
-    <canvas id="chartCanvas" width="800" height="400"></canvas> <!-- Canvas para el gráfico -->
+    <div id="chartContainer">
+        <canvas id="chartCanvas" width="800" height="400"></canvas> <!-- Canvas para el gráfico -->
+    </div>
     <script>
-        // Obtener datos de la URL
+        // Obtener parámetros de la URL
         const urlParams = new URLSearchParams(window.location.search);
-        const data = urlParams.get("data") || "Unidad Territorial,Sector,Valor,Indicador,Nivel,Año\nPBA,Total,97.3,Estudiantes,Secundario,2023\nPBA,Estatal,96.1,Estudiantes,Secundario,2023\nPBA,Privado,99.5,Estudiantes,Secundario,2023";
+        const filename = urlParams.get("filename") || "grafico";
+        const ejeY = decodeURIComponent(urlParams.get("EY") || "4088638,29367,9615,34190,110674,76468,260314").split(",");
+        const ejeX = decodeURIComponent(urlParams.get("EX") || "PBA,Campana,Exaltacion de la Cruz,Zarate,Pilar,Escobar,Region 11").split(",");
+        const leyendas = decodeURIComponent(urlParams.get("L") || "Total,Estatal,Privado").split(",");
+        const titulo = decodeURIComponent(urlParams.get("T") || "Estudiantes - Nivel: Secundario - Año: 2023");
 
-        // Decodificar y procesar los datos
-        const decodedData = decodeURIComponent(data);
-        const rows = decodedData.split("\n").map(row => row.split(","));
-        const headers = rows.shift(); // Obtener encabezados
+        // Mostrar el título en la página
+        document.getElementById("chartTitle").innerText = titulo;
 
-        // Extraer columnas específicas
-        const unidadTerritorialIndex = headers.indexOf("Unidad Territorial");
-        const sectorIndex = headers.indexOf("Sector");
-        const valorIndex = headers.indexOf("Valor");
-        const indicadorIndex = headers.indexOf("Indicador");
-        const nivelIndex = headers.indexOf("Nivel");
-        const añoIndex = headers.indexOf("Año");
-
-        // Preparar datos para Chart.js
-        const labels = [...new Set(rows.map(row => row[unidadTerritorialIndex]))]; // Valores únicos del eje X
-        const datasets = [];
-        const groupedData = {};
-
-        // Agrupar datos por sector
-        rows.forEach(row => {
-            const sector = row[sectorIndex];
-            const unidad = row[unidadTerritorialIndex];
-            const valor = parseFloat(row[valorIndex]);
-            if (!groupedData[sector]) {
-                groupedData[sector] = Array(labels.length).fill(null);
-            }
-            const index = labels.indexOf(unidad);
-            groupedData[sector][index] = valor;
-        });
-
-        // Colores según sector
+        // Preparar datasets para Chart.js
         const sectorColors = {
             "Total": "#009AAE",
             "Estatal": "#9D9D9D",
             "Privado": "#4B6B97"
         };
 
-        // Crear datasets para el gráfico
-        Object.keys(groupedData).forEach(sector => {
-            datasets.push({
-                label: sector,
-                data: groupedData[sector],
-                backgroundColor: sectorColors[sector] || "#CCCCCC",
-                borderColor: sectorColors[sector] || "#CCCCCC",
+        const datasets = leyendas.map((leyenda, index) => {
+            const data = ejeY.map((value, i) => (index === i ? parseFloat(value) : null));
+            return {
+                label: leyenda,
+                data: data,
+                backgroundColor: sectorColors[leyenda] || "#CCCCCC",
+                borderColor: sectorColors[leyenda] || "#CCCCCC",
                 borderWidth: 1,
-            });
+            };
         });
-
-        // Concatenar título
-        const indicador = rows[0][indicadorIndex];
-        const nivel = rows[0][nivelIndex];
-        const año = rows[0][añoIndex];
-        const title = `${indicador} - Nivel: ${nivel} - Año: ${año}`;
-        document.getElementById("chartTitle").innerText = title;
 
         // Crear el gráfico
         const ctx = document.getElementById('chartCanvas').getContext('2d');
         const chart = new Chart(ctx, {
             type: 'bar', // Tipo de gráfico
             data: {
-                labels: labels,
+                labels: ejeX,
                 datasets: datasets,
             },
             options: {
@@ -97,24 +78,36 @@
                     title: {
                         display: false, // Ya mostramos el título en HTML
                     },
+                    datalabels: {
+                        anchor: 'end',
+                        align: 'end',
+                        color: '#000', // Color del texto
+                        font: {
+                            size: 10,
+                        },
+                        formatter: function (value) {
+                            return value + '%'; // Formato del valor
+                        },
+                    },
                 },
                 scales: {
                     y: {
                         beginAtZero: true,
                         ticks: {
-                            callback: function(value) {
+                            callback: function (value) {
                                 return value + " %"; // Añadir % al eje Y
-                            }
-                        }
-                    }
-                }
+                            },
+                        },
+                    },
+                },
             },
+            plugins: [ChartDataLabels], // Activar las etiquetas
         });
 
         // Descargar el gráfico como PNG
         setTimeout(() => {
             const link = document.createElement("a");
-            link.download = "grafico.png";
+            link.download = filename + ".png"; // Nombre dinámico del archivo
             link.href = document.getElementById('chartCanvas').toDataURL("image/png");
             document.body.appendChild(link);
             link.click();
