--- a/generar-png.html
+++ b/generar-png.html
@@ -36,39 +36,44 @@
     <script>
         // Obtener parámetros de la URL
         const urlParams = new URLSearchParams(window.location.search);
-        const filename = decodeURIComponent(urlParams.get("filename") || "grafico");
-        const titulo = decodeURIComponent(urlParams.get("T") || "Gráfico");
         const data = decodeURIComponent(urlParams.get("data") || "");
-        
-        // Mostrar el título
-        document.getElementById("chartTitle").innerText = titulo;
+        const title = decodeURIComponent(urlParams.get("T") || "Gráfico");
+        const exIndex = parseInt(urlParams.get("EX"), 10) - 1; // Convertir a base 0
+        const eyIndex = parseInt(urlParams.get("EY"), 10) - 1;
+        const lIndex = parseInt(urlParams.get("L"), 10) - 1;
 
-        // Procesar datos del parámetro `data`
-        const rows = data.split("\n").map(row => row.split("%2C")); // Separar filas y columnas
-        const headers = rows.shift(); // La primera fila son los encabezados
-        
-        // Validar encabezados
-        const colUnidad = headers.indexOf("Unidad Territorial");
-        const colSector = headers.indexOf("Sector");
-        const colValor = headers.indexOf("Valor");
-        if (colUnidad === -1 || colSector === -1 || colValor === -1) {
-            alert("Error: Encabezados de datos no válidos.");
-            throw new Error("Los datos proporcionados no tienen los encabezados esperados.");
+        // Mostrar el título
+        document.getElementById("chartTitle").innerText = title;
+
+        // Validar y procesar datos
+        if (!data) {
+            alert("Error: no se proporcionaron datos.");
+            throw new Error("Los datos no están disponibles.");
         }
 
-        // Extraer datos únicos para el gráfico
-        const labels = [...new Set(rows.map(row => row[colUnidad]))]; // Eje X
-        const leyendas = [...new Set(rows.map(row => row[colSector]))]; // Leyendas
-        const datasets = leyendas.map((leyenda) => {
+        // Convertir el CSV en filas y columnas
+        const rows = data.split("\n").map(row => row.split(","));
+        const headers = rows.shift(); // La primera fila son los encabezados
+
+        // Validar índices
+        if (exIndex >= headers.length || eyIndex >= headers.length || lIndex >= headers.length) {
+            alert("Error: índices de columnas inválidos.");
+            throw new Error("Los índices proporcionados exceden el número de columnas.");
+        }
+
+        // Extraer datos para el gráfico
+        const labels = [...new Set(rows.map(row => row[exIndex].trim()))]; // Eje X
+        const legends = [...new Set(rows.map(row => row[lIndex].trim()))]; // Leyendas
+        const datasets = legends.map((legend) => {
             return {
-                label: leyenda,
+                label: legend,
                 data: labels.map(label => {
-                    const match = rows.find(row => row[colUnidad] === label && row[colSector] === leyenda);
-                    return match ? parseFloat(match[colValor]) : 0; // Valor
+                    const match = rows.find(row => row[exIndex].trim() === label && row[lIndex].trim() === legend);
+                    return match ? parseFloat(match[eyIndex]) : 0; // Valor
                 }),
-                backgroundColor: leyenda === "Total" ? "#009AAE" :
-                                leyenda === "Estatal" ? "#9D9D9D" :
-                                leyenda === "Privado" ? "#4B6B97" : "#CCCCCC",
+                backgroundColor: legend === "Total" ? "#009AAE" :
+                                legend === "Estatal" ? "#9D9D9D" :
+                                legend === "Privado" ? "#4B6B97" : "#CCCCCC",
                 borderColor: "#FFFFFF",
                 borderWidth: 1,
             };
@@ -100,7 +105,7 @@
         // Descargar como PNG
         setTimeout(() => {
             const link = document.createElement("a");
-            link.download = filename + ".png";
+            link.download = title.replace(/ /g, "_") + ".png";
             link.href = document.getElementById('chartCanvas').toDataURL("image/png");
             document.body.appendChild(link);
             link.click();
