--- a/generar-png.html
+++ b/generar-png.html
@@ -34,25 +34,36 @@
         <canvas id="chartCanvas" width="800" height="400"></canvas>
     </div>
     <script>
+        // Función para decodificar componentes URI de forma segura
+        function safeDecodeURIComponent(component) {
+            try {
+                return decodeURIComponent(component);
+            } catch (e) {
+                console.error("Error al decodificar componente URI:", e.message);
+                return component; // Devuelve sin decodificar si hay error
+            }
+        }
+
         // Obtener parámetros de la URL
         const urlParams = new URLSearchParams(window.location.search);
-        const data = decodeURIComponent(urlParams.get("data") || "");
-        const title = decodeURIComponent(urlParams.get("T") || "Gráfico");
-        const exIndex = parseInt(urlParams.get("EX"), 10) - 1; // Convertir a base 0
+        const filename = safeDecodeURIComponent(urlParams.get("filename") || "grafico");
+        const title = safeDecodeURIComponent(urlParams.get("T") || "Gráfico");
+        const data = safeDecodeURIComponent(urlParams.get("data") || "");
+        const exIndex = parseInt(urlParams.get("EX"), 10) - 1; // Índice base 0
         const eyIndex = parseInt(urlParams.get("EY"), 10) - 1;
         const lIndex = parseInt(urlParams.get("L"), 10) - 1;
 
         // Mostrar el título
         document.getElementById("chartTitle").innerText = title;
 
-        // Validar y procesar datos
+        // Validar datos
         if (!data) {
             alert("Error: no se proporcionaron datos.");
             throw new Error("Los datos no están disponibles.");
         }
 
-        // Convertir el CSV en filas y columnas
-        const rows = data.split("\n").map(row => row.split(","));
+        // Procesar el CSV de `data`
+        const rows = data.split("%0A").map(row => row.split("%2C"));
         const headers = rows.shift(); // La primera fila son los encabezados
 
         // Validar índices
@@ -105,7 +116,7 @@
         // Descargar como PNG
         setTimeout(() => {
             const link = document.createElement("a");
-            link.download = title.replace(/ /g, "_") + ".png";
+            link.download = filename.replace(/ /g, "_") + ".png";
             link.href = document.getElementById('chartCanvas').toDataURL("image/png");
             document.body.appendChild(link);
             link.click();
