--- a/generar-png.html
+++ b/generar-png.html
@@ -4,77 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generar Gráfico PNG</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Biblioteca Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script> <!-- Plugin para etiquetas -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #E6E6E6; /* Fondo del título */
+        }
+
+        h1 {
+            text-align: center;
+            color: #004D57; /* Color del título */
+        }
+
+        #chartContainer {
+            background-color: white; /* Fondo blanco del gráfico */
+            padding: 20px;
+            border-radius: 8px;
+            width: 90%;
+            margin: 20px auto;
+        }
+    </style>
 </head>
 <body>
+    <h1 id="chartTitle"></h1>
+    <div id="chartContainer">
+        <canvas id="chartCanvas" width="800" height="400"></canvas> <!-- Canvas para el gráfico -->
+    </div>
     <script>
-        // Función para decodificar URI de forma segura
-        function safeDecodeURIComponent(component) {
-            try {
-                return decodeURIComponent(component);
-            } catch (e) {
-                console.error("Error al decodificar componente URI:", e.message);
-                return component; // Devuelve el componente sin decodificar si hay error
-            }
-        }
-
-        // Obtener parámetros de la URL
+        // Obtener datos de la URL
         const urlParams = new URLSearchParams(window.location.search);
-        const filename = safeDecodeURIComponent(urlParams.get("filename") || "grafico");
-        const title = safeDecodeURIComponent(urlParams.get("T") || "Gráfico");
-        const data = safeDecodeURIComponent(urlParams.get("data") || "");
-        const exColumn = safeDecodeURIComponent(urlParams.get("EX") || ""); // Columna para el eje X
-        const eyColumn = safeDecodeURIComponent(urlParams.get("EY") || ""); // Columna para el eje Y
-        const lColumn = safeDecodeURIComponent(urlParams.get("L") || ""); // Columna para la leyenda
+        const data = urlParams.get("data") || "Unidad Territorial,Sector,Valor,Indicador,Nivel,Año\nPBA,Total,97.3,Estudiantes,Secundario,2023\nPBA,Estatal,96.1,Estudiantes,Secundario,2023\nPBA,Privado,99.5,Estudiantes,Secundario,2023";
 
-        // Validar datos y parámetros
-        if (!data) {
-            alert("Error: no se proporcionaron datos.");
-            throw new Error("Los datos no están disponibles.");
-        }
-        if (!exColumn || !eyColumn || !lColumn) {
-            alert("Error: los nombres de las columnas EX, EY y L deben ser proporcionados.");
-            throw new Error("Columnas no especificadas.");
-        }
+        // Decodificar y procesar los datos
+        const decodedData = decodeURIComponent(data);
+        const rows = decodedData.split("\n").map(row => row.split(","));
+        const headers = rows.shift(); // Obtener encabezados
 
-        // Procesar el CSV de `data`
-        const rows = data.split("%0A").map(row => row.split("%2C"));
-        const headers = rows.shift(); // La primera fila son los encabezados
+        // Extraer columnas específicas
+        const unidadTerritorialIndex = headers.indexOf("Unidad Territorial");
+        const sectorIndex = headers.indexOf("Sector");
+        const valorIndex = headers.indexOf("Valor");
+        const indicadorIndex = headers.indexOf("Indicador");
+        const nivelIndex = headers.indexOf("Nivel");
+        const añoIndex = headers.indexOf("Año");
 
-        // Identificar índices de las columnas
-        const exIndex = headers.indexOf(exColumn);
-        const eyIndex = headers.indexOf(eyColumn);
-        const lIndex = headers.indexOf(lColumn);
+        // Preparar datos para Chart.js
+        const labels = [...new Set(rows.map(row => row[unidadTerritorialIndex]))]; // Valores únicos del eje X
+        const datasets = [];
+        const groupedData = {};
 
-        // Validar índices
-        if (exIndex === -1 || eyIndex === -1 || lIndex === -1) {
-            alert("Error: uno o más nombres de columnas no coinciden con los encabezados.");
-            throw new Error("Columnas no encontradas en los encabezados.");
-        }
-
-        // Extraer datos para el gráfico
-        const labels = [...new Set(rows.map(row => row[exIndex]?.trim()))]; // Eje X
-        const legends = [...new Set(rows.map(row => row[lIndex]?.trim()))]; // Leyendas
-        const datasets = legends.map((legend) => {
-            return {
-                label: legend,
-                data: labels.map(label => {
-                    const match = rows.find(row => row[exIndex]?.trim() === label && row[lIndex]?.trim() === legend);
-                    return match ? parseFloat(match[eyIndex]) : 0; // Valor
-                }),
-                backgroundColor: legend === "Total" ? "#009AAE" :
-                                legend === "Estatal" ? "#9D9D9D" :
-                                legend === "Privado" ? "#4B6B97" : "#CCCCCC",
-                borderColor: "#FFFFFF",
-                borderWidth: 1,
-            };
+        // Agrupar datos por sector
+        rows.forEach(row => {
+            const sector = row[sectorIndex];
+            const unidad = row[unidadTerritorialIndex];
+            const valor = parseFloat(row[valorIndex]);
+            if (!groupedData[sector]) {
+                groupedData[sector] = Array(labels.length).fill(null);
+            }
+            const index = labels.indexOf(unidad);
+            groupedData[sector][index] = valor;
         });
 
+        // Colores según sector
+        const sectorColors = {
+            "Total": "#009AAE",
+            "Estatal": "#9D9D9D",
+            "Privado": "#4B6B97"
+        };
+
+        // Crear datasets para el gráfico
+        Object.keys(groupedData).forEach(sector => {
+            datasets.push({
+                label: sector,
+                data: groupedData[sector],
+                backgroundColor: sectorColors[sector] || "#CCCCCC",
+                borderColor: sectorColors[sector] || "#CCCCCC",
+                borderWidth: 1,
+            });
+        });
+
+        // Concatenar título
+        const indicador = rows[0][indicadorIndex];
+        const nivel = rows[0][nivelIndex];
+        const año = rows[0][añoIndex];
+        const title = `${indicador} - Nivel: ${nivel} - Año: ${año}`;
+        document.getElementById("chartTitle").innerText = title;
+
         // Crear el gráfico
-        const ctx = document.createElement('canvas').getContext('2d');
-        document.body.appendChild(ctx.canvas);
+        const ctx = document.getElementById('chartCanvas').getContext('2d');
         const chart = new Chart(ctx, {
-            type: 'bar',
+            type: 'bar', // Tipo de gráfico
             data: {
                 labels: labels,
                 datasets: datasets,
@@ -85,20 +105,40 @@
                     legend: {
                         position: 'top',
                     },
+                    title: {
+                        display: false, // Ya mostramos el título en HTML
+                    },
+                    datalabels: {
+                        anchor: 'end',
+                        align: 'end',
+                        color: '#000', // Color del texto
+                        font: {
+                            size: 10,
+                        },
+                        formatter: function (value) {
+                            return value + '%'; // Formato del valor
+                        },
+                    },
                 },
                 scales: {
                     y: {
                         beginAtZero: true,
+                        ticks: {
+                            callback: function (value) {
+                                return value + " %"; // Añadir % al eje Y
+                            },
+                        },
                     },
                 },
             },
+            plugins: [ChartDataLabels], // Activar las etiquetas
         });
 
-        // Descargar como PNG
+        // Descargar el gráfico como PNG
         setTimeout(() => {
             const link = document.createElement("a");
-            link.download = filename.replace(/ /g, "_") + ".png";
-            link.href = ctx.canvas.toDataURL("image/png");
+            link.download = "grafico.png";
+            link.href = document.getElementById('chartCanvas').toDataURL("image/png");
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
@@ -106,8 +146,8 @@
             // Cerrar la pestaña después de un breve retraso
             setTimeout(() => {
                 window.close();
-            }, 1000);
-        }, 2000);
+            }, 1000); // Espera 1 segundo para cerrar
+        }, 2000); // Espera para asegurar que el gráfico se genere correctamente
     </script>
 </body>
 </html>
